# Calviz

./: .gitignore  CMakeLists.txt  Calviz.pro  README.md  calviz.ui
include/: Differrential.hpp  Polynomial.hpp  Processing.hpp  RSD.hpp  Utility.hpp  calviz.h
release/: Calviz
release/.moc/: moc_calviz.cpp
src/: Differrential.cpp  Polynomial.cpp  Processing.cpp  RSD.cpp  Utility.cpp  calviz.cpp  main.cpp  tmp.cpp
